--- a/resume/config.toml
+++ b/resume/config.toml
@@ -3,7 +3,7 @@
 baseURL = "http://example.org/"
 languageCode = "en"
 title = ""
-theme = "devresume"
+theme = "dev"
 googleAnalytics = "UA-XXXXXXX-Y"
 
 
