--- a/resume/config.toml
+++ b/resume/config.toml
@@ -2,7 +2,7 @@
 
 baseURL = "http://example.org/"
 languageCode = "en"
-title = ""
+title = "Benchi Philipose " 
 theme = "dev"
 googleAnalytics = "UA-XXXXXXX-Y"
 
@@ -25,7 +25,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
     [params.profile]
         enable = true
         name = "Benchi Philipose"
-        tagline = "Senior Software Engineer"
+        tagline = "Sales & Marketing Professional"
         avatar = "avatar.png"
 
 
@@ -41,15 +41,11 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.contact.list]]
         icon = "fas fa-phone-square"
         url = "tel:#"
-        text = "0123 4567 890"
+        text = "+91 9900966665"
         [[params.contact.list]]
         icon = "fas fa-envelope-square"
         url = "mailto:#"
-        text = "simon.doe@yourwebsite.com"
-        [[params.contact.list]]
-        icon = "fas fa-globe"
-        url = "#"
-        text = "www.yourwebsite.com"
+        text = "benchiphilipose@rediffmail.com"
 
 
 
@@ -63,30 +59,24 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.skills.list]]
         title = "Technical"
         [[params.skills.list.items]]
-        details = "JavaScript/Angular/React/Vue"
+        details = "Energy Monitoring Systems & Software "
         [[params.skills.list.items]]
-        details = "Python/Ruby/PHP"
+        details = "Energy Efficiency Solutions Sales"
         [[params.skills.list.items]]
-        details = "Node.js/ASP.NET"
+        details = "Power Quality Solutions"
         [[params.skills.list.items]]
-        details = "PostgreSQL/MySQL"
-        [[params.skills.list.items]]
-        details = "Object-oriented design"
-        [[params.skills.list.items]]
-        details = "Design and implement database structures"
-        [[params.skills.list.items]]
-        details = "Lead and deliver complex software systems"
-
+        details = "Electrical Panel Components"
+        
         [[params.skills.list]]
         title = "Professional"
         [[params.skills.list.items]]
-        details = "Effective communication"
+        details = "Effective Communication"
         [[params.skills.list.items]]
-        details = "Team player"
+        details = "Team Play & Team Management"
         [[params.skills.list.items]]
-        details = "Strong problem solver"
+        details = "Strong Problem Solving"
         [[params.skills.list.items]]
-        details = "Good time management"
+        details = "Key Account / Channel Management"
 
 
 
@@ -99,14 +89,16 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.education.list]]
-        degree = "MSc in Computer Science"
-        university = "University College London"
-        dates = "2010 - 2011"
+        degree = "EMBA in Marketing"
+        university = "Karnataka State Open University "
+        
         [[params.education.list]]
-        degree = "BSc Maths and Physics"
-        university = "Imperial College London"
-        dates = "2007 - 2010"
+        degree = "BE in Electrical & Electronics Engineering"
+        university = "Bangalore University"
 
+        [[params.education.list]]
+        degree = "Pre Degree Course in PCM"
+        university = "Kerala University"
 
 
 
@@ -118,13 +110,19 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.awards.list]]
-        name = "Award Lorem Ipsum"
-        body = "Microsoft lorem ipsum"
-        date = "2019"
+        name = "Best Regional Manager Award "
+        body = "Schneider Electric"
+        date = "2007 & 2011"
         [[params.awards.list]]
-        name = "Award Donec Sodales"
-        body = "Oracle Aenean"
-        date = "2017"
+        name = "Best Dealer Motivator Award"
+        body = "Conserv Systems"
+        date = "2002 & 2003"
+       name = "Best Team Player Award"
+        body = "Conserv Systems"
+        date = "2004 & 2005"
+       name = "POSE Value Champion Award"
+        body = "Schneider Electric"
+        date = "2010 & 2011"
 
 
 
@@ -138,10 +136,19 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.languages.list]]
         name = "English"
-        level = "Native"
+        level = "…."
         [[params.languages.list]]
-        name = "Spanish"
-        level = "Professional"
+        name = "Hindi"
+        level = "…"
+       [[params.languages.list]]
+        name = "Tamil"
+        level = "…"
+        [[params.languages.list]]
+        name = "Kannada"
+        level = ".."
+        [[params.languages.list]]
+        name = "Malayalam"
+        level = "…."
 
 
 
@@ -154,9 +161,9 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.interests.list]]
-        name = "Climbing"
+        name = "Reading"
         [[params.interests.list]]
-        name = "Snowboarding"
+        name = "Swimming"
         [[params.interests.list]]
         name = "Photography"
         [[params.interests.list]]
@@ -171,7 +178,9 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
     [params.summary]
         enable = true
-        text = "Summarise your career here. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh."
+        text = "Dedicated Professional with 25 years of experience in Sales, Marketing, Business Development,
+Key Account Management, Distribution / Channel Partner Management, Branch management and
+People Development in multifarious industry spectrum."
 
 
 
@@ -184,104 +193,42 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.experience.list]]
-        title = "Senior Software Engineer"
-        dates = "2019 - Present"
-        company = "Google"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis."
-        [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
-        [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
-        [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        title = "Director – Business Development"
+        dates = "Jan 2021 - Present"
+        company = "Urja Power And Building Automation. Bangalore, India"
+        details = "Developing periodic business plans & strategies, in coordination with macro plans of
+organization for revenue generation through sales for a division deal with Energy Monitoring & Power Quality Solutions and Services."
 
         [[params.experience.list]]
-        title = "Lead Software Developer"
-        dates = "2016 - 2019"
-        company = "Apple"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel."
-        [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
-        [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        title = "Associated General Manager – Business Development"
+        dates = "Jul 2015 – Dec 2019"
+        company = "Schneider Electric. Mumbai, India"
+        details = "Managed the business through Distributors & Direct in collaboration with national sales team, as per the need of Power Solutions business unit, a division deal with Metering, Energy Monitoring Software, Energy Audit, Energy Efficiency Solutions, Capacitors, APFC Panels, Harmonic filters, etc. Made Area Specific Strategy, Ensured Implementation & Generation of New Business. Monitored the Performance monthly and fine-tuned strategies as and when required, to ensure healthy growth from each region. Focused on Solution Sales and Ensured Specific Effort at End Customer from influencer level to CXO level. "
 
         [[params.experience.list]]
-        title = "Senior Software Developer"
-        dates = "2014 - 2016"
-        company = "Dropbox"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        title = " Associated General Manager – Customer Marketing"
+        dates = "Jan 2012 – Jun 2015"
+        company = " Schneider Electric. Bangalore, India "
+        details = " Updated and Refreshed Panel Builder (PB)Channel Strategy / Road Map, Lead the effort in strengthening relationship with Partners / Key Panel Builders, Maintained close relationship at PB’s CEO / owners’ level and Deployed the loyalty program for the partners. "
 
         [[params.experience.list]]
-        title = "Senior Developer"
-        dates = "2013 - 2014"
-        company = "Uber"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        title = "Regional Manager – Sales & Support"
+        dates = "Apr 2008 – Dec 2011"
+        company = " Schneider Electric. Bangalore, India "
+        details = "Handled a team of 30 with less than 5% Attrition to manage / achieve the business targets set by Energy Management Business Unit in Sales, Revenue, Customer Satisfaction and Marketing Events. "
 
         [[params.experience.list]]
-        title = "Backend Developer"
-        dates = "2014 - 2016"
-        company = "Amazon"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        title = "Area Manager – Sales & Support"
+        dates = "Jan 1999 -Mar 2008"
+        company = "Schneider Electric (Formerly Conzerv Systems).  Cochin / Coimbatore, India"
+        details = " Effectively handled the area as a profit center and achieved revenue, market share, profitability growth and handled the dealer network / developed relationships with different
+industrial segments. Tracked the productivity of the company engineers & the distributor’s engineers. Positioned the metering and power solution software products in premium segments. Conducted seminars, demonstrations, presentations for various forums etc. "
 
         [[params.experience.list]]
-        title = "Frontend Developer"
-        dates = "2013 - 2014"
-        company = "Startup"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
-
-
-
-
-
-
-
-
-
-
-
-    [params.projects]
-        enable = true
-
-        [[params.projects.list]]
-        title = "Project Lorem Ipsum"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
-
-        [[params.projects.list]]
-        title = "Project Sed Fringilla"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
-
-        [[params.projects.list]]
-        title = "Project Praesent"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
-
-
-
-
-
-
-
-
-
-
-    [params.information]
-        enable = true
-
-        [[params.information.list]]
-        title = "Papers"
-        [[params.information.list.items]]
-        details = "2018 · Lorem Ipsum"
-        [[params.information.list.items]]
-        details = "2016 · Sed Fringilla"
-
-        [[params.information.list]]
-        title = "Interests"
-        details = "Climbing, Snowboarding, Photography, Travelling"
-
-
-
+        title = "Territory Manager – Sales & Support"
+        dates = "Jul 1995 – Dec 1998"
+        company = "Supratronics Systems. Calicut, India"
+        details = " Business Development with Major computer dealers, End Customers, and traders to increase the reach and Business of Power Conditioning Equipment’s like UPS, Stabilizers etc. Successfully coordinated with factory for effective SCM and allocation of material to assure timely delivery of order."
 
 
 
@@ -291,19 +238,8 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.social.list]]
-        icon = "fab fa-github-square"
-        url = "//github.com/username"
-        title = "username"
-        [[params.social.list]]
         icon = "fab fa-linkedin"
-        url = "//linkedin.com/in/username"
-        title = "username"
-        [[params.social.list]]
-        icon = "fab fa-twitter-square"
-        url = "//twitter.com/username"
-        title = "@username"
-
-
-
+        url = "//https://www.linkedin.com/in/benchi-philipose-929a0486/"
+        title = "Linkedin"
 
 
