--- a/resume/config.toml
+++ b/resume/config.toml
@@ -234,7 +234,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
         [[params.social.list]]
         icon = "fab fa-linkedin"
-        url = "//https://www.linkedin.com/in/benchi-philipose-929a0486/"
+        url = "//www.linkedin.com/in/benchi-philipose-929a0486/"
         title = "Linkedin"
 
 
